# django-no-hot-reload-mod

./: .gitignore  README.md  pyproject.toml
django_no_hot_reload_mod/src/code_modifier/: apps.py  utils.py  views.py
django_no_hot_reload_mod/src/code_modifier/templates/code_modifier/: code_blocks.html
django_no_hot_reload_mod/src/django_no_hot_reload_mod/code_modifier/: apps.py  forms.py  urls.py
