[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "example_package_papaggalos"
version = "0.0.8"
authors = [
  { name="https://github.com/AggelosAr", email="aggelosarelakis@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AggelosAr/django-no-hot-reload-mod"
Issues = "https://github.com/AggelosAr/django-no-hot-reload-mod"